fix: prepare to publish jsr

--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,12 @@
 {
+  "exports": "./denops/@ddu-sources/git_diff.ts",
   "lock": false,
+  "name": "@kuuote/ddu-source-git-diff",
   "tasks": {
+    "check": "deno task fmt-check && deno task lint && deno task test",
     "fmt-check": "deno fmt --check denops",
     "lint": "deno lint",
-    "test": "deno test -A",
-    "check": "deno task fmt-check && deno task lint && deno task test"
-  }
+    "test": "deno test -A"
+  },
+  "version": "1.0.0"
 }
